# jack-connection-manager

./: .gitattributes  README.md  connections.yml  jack-conneeeeect.py  meson.build  pyproject.toml
connection_files/: connections.yml
matchmaker-config-generator/: matchmaker-config-generater.py  newmark_connections.yml  wintermute_connections.yml
src/jack_connection_manager/: ConnectionManager.py  jack_connection_manager.py
src/jack_conneeect/: ConnectionManager.py  jack_conneeect.py
src/jack_wire_puller/: ConnectionManager.py  jack_wire_puller.py
systemd/: jack-connection-manager.service.in  jack-conneeect.service.in  jack-wire-puller.service.in  meson.build
