[build-system]
requires = ["setuptools >= 61.0.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
jack_wire_puller = ["*.yml"]

# automatically handle version numbers
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/jack_wire_puller/_version.py"
versionfile_build = "jack_wire_puller/_version.py"
tag_prefix = ""
parentdir_prefix = "jack_wire_puller-"

[project]
name = "jack_wire_puller"
description = "A tool for automatically connecting jack clients with lots of ports"
authors = [{ name = "Max Weidauer", email = "weidauer@campus.tu-berlin.de" }]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["JACK-Client", "click", "pyYAML"]
license = { file = "LICENSE" }

[project.scripts]
jack-wire-puller = "jack_wire_puller.jack_wire_puller:main"

[project.urls]
Github = "https://github.com/tu-studio/jack-conneeeect"
Issues = "https://github.com/tu-studio/jack-conneeeect/issues"
